# AsTeRICS-Grid-Helper

./: .coverage  .gitignore  README.md  asterics-grid-speech-mac.spec  asterics-grid-speech.spec  build.py  classDiagram.yml  index.js  package-lock.json  package.json  pyproject.toml  speech.ini  test_provider.py
.github/workflows/: build.yml
hooks/: hook-flask.py
interaction/: README.md  http-serial-bridge.py
speech/: __init__.py  audio_manager.py  base_provider.py  config.py  config_manager.py  constants.py  custom_providers.py  espeak.py  mimic3_data.py  msazure.py  msazure_data.py  msazure_playing.py  provider_base.py  provider_elevenlabs_data.py  provider_espeak_data.py  provider_factory.py  provider_mimic3_data.py  provider_msazure_data.py  provider_msazure_playing.py  provider_piper_data.py  provider_platform_data.py  provider_pytts_playing.py  provider_template_data.py  provider_template_playing.py  provider_test_data.py  pytts.py  speechManager.py  speech_manager.py  start.py  template.py  template_data.py  template_playing.py  test.py  test_audio.py  test_endpoints.py  test_engines.py  tts_provider.py  util.py
speech/templates/: config.html  test.html
speech/tests/: chatterbox_test.py  coqui_test.py
wordforms/: README.md  scraper.php
wordforms/wordforms_dep_v2/: scraper.php
